{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 776,
  "lineage": "1aadc13a-dd88-fd13-4a77-9dec10fd5ebe",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/7cab6453e6529b95",
            "arn_suffix": "app/alb/7cab6453e6529b95",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-318750298.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/7cab6453e6529b95",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0575658b42f65bdad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006dc6127c1106d7c"
              },
              {
                "subnet_id": "subnet-00a18c20dc7ed9bcd"
              }
            ],
            "subnets": [
              "subnet-006dc6127c1106d7c",
              "subnet-00a18c20dc7ed9bcd"
            ],
            "tags": {
              "Name": "jupiter-static-default-alb",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-alb",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc_id": "vpc-0ef85c8a03ffeab58",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb/7cab6453e6529b95/992b3b2e3d7d45a8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb/7cab6453e6529b95/992b3b2e3d7d45a8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/7cab6453e6529b95",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb/7cab6453e6529b95/33b67b6b245cfee3",
            "certificate_arn": "arn:aws:acm:us-east-1:450665609241:certificate/9a7f66de-e36b-48f4-83d6-999433ad8479",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb/c102c7f53f56e95c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:listener/app/alb/7cab6453e6529b95/33b67b6b245cfee3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:loadbalancer/app/alb/7cab6453e6529b95",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.alb_target_group",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb/c102c7f53f56e95c",
            "arn_suffix": "targetgroup/alb/c102c7f53f56e95c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:450665609241:targetgroup/alb/c102c7f53f56e95c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group/sg-0575658b42f65bdad",
            "description": "Allow ports 22, 80 and 443",
            "egress": [],
            "id": "sg-0575658b42f65bdad",
            "ingress": [],
            "name": "Allow SSL Certificate",
            "name_prefix": "",
            "owner_id": "450665609241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_SSH_HTTP_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0a58d2cb0786e806c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a58d2cb0786e806c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0575658b42f65bdad",
            "security_group_rule_id": "sgr-0a58d2cb0786e806c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-05929ecc4d9eccda7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05929ecc4d9eccda7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0575658b42f65bdad",
            "security_group_rule_id": "sgr-05929ecc4d9eccda7",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-08d8e046d67495af6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08d8e046d67495af6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0575658b42f65bdad",
            "security_group_rule_id": "sgr-08d8e046d67495af6",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-00487a8fbd9053cb7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-00487a8fbd9053cb7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0575658b42f65bdad",
            "security_group_rule_id": "sgr-00487a8fbd9053cb7",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group/sg-0dfdea1580835859d",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0dfdea1580835859d",
            "ingress": [],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "450665609241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-01813069844a97d91",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01813069844a97d91",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dfdea1580835859d",
            "security_group_rule_id": "sgr-01813069844a97d91",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0196664d0c2c37ce9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0196664d0c2c37ce9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0575658b42f65bdad",
            "security_group_id": "sg-0dfdea1580835859d",
            "security_group_rule_id": "sgr-0196664d0c2c37ce9",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.auto-scaling.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-000d0547d7cdcf7de",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-000d0547d7cdcf7de",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0575658b42f65bdad",
            "security_group_id": "sg-0dfdea1580835859d",
            "security_group_rule_id": "sgr-000d0547d7cdcf7de",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.auto-scaling.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auto-scaling",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:security-group-rule/sgr-0908960ca0dcc4ea8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0908960ca0dcc4ea8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dfdea1580835859d",
            "security_group_rule_id": "sgr-0908960ca0dcc4ea8",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auto-scaling.aws_security_group.public_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076e04d053dceaefb",
            "domain": "vpc",
            "id": "eipalloc-076e04d053dceaefb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-214-43-153.compute-1.amazonaws.com",
            "public_ip": "18.214.43.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jupiter-static-default-Nat-eip",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-Nat-eip",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0056cdc84eb60abdf",
            "domain": "vpc",
            "id": "eipalloc-0056cdc84eb60abdf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-224-134-158.compute-1.amazonaws.com",
            "public_ip": "3.224.134.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jupiter-static-default-Nat-eip-az-1b",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-Nat-eip-az-1b",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:internet-gateway/igw-01f108d04d5c63795",
            "id": "igw-01f108d04d5c63795",
            "owner_id": "450665609241",
            "tags": {
              "Name": "jupiter-static-default-igw",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-igw",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076e04d053dceaefb",
            "association_id": "eipassoc-007c1c9e54607f12c",
            "connectivity_type": "public",
            "id": "nat-0927372457f2694f5",
            "network_interface_id": "eni-072a37820007c0bb9",
            "private_ip": "10.0.1.46",
            "public_ip": "18.214.43.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a18c20dc7ed9bcd",
            "tags": {
              "Name": "jupiter-static-default-Nat",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-Nat",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0056cdc84eb60abdf",
            "association_id": "eipassoc-0d1bd357bca85572e",
            "connectivity_type": "public",
            "id": "nat-0688a269a465fb841",
            "network_interface_id": "eni-09030c53ca43a6b3d",
            "private_ip": "10.0.2.58",
            "public_ip": "3.224.134.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-006dc6127c1106d7c",
            "tags": {
              "Name": "jupiter-static-default-Nat_gw",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-Nat_gw",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_az_1b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:route-table/rtb-05e5427710c5c3112",
            "id": "rtb-05e5427710c5c3112",
            "owner_id": "450665609241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0927372457f2694f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jupiter-static-default-private-rt",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-private-rt",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:route-table/rtb-0d1ae87f702744283",
            "id": "rtb-0d1ae87f702744283",
            "owner_id": "450665609241",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f108d04d5c63795",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jupiter-static-default-public-rt",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-public-rt",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adc439fa87efc933",
            "route_table_id": "rtb-05e5427710c5c3112",
            "subnet_id": "subnet-0e4b8d0ad7e210db9"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09619f268b165218f",
            "route_table_id": "rtb-05e5427710c5c3112",
            "subnet_id": "subnet-0b14f77d473a137d4"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "azz_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07855592e09b79b2d",
            "route_table_id": "rtb-05e5427710c5c3112",
            "subnet_id": "subnet-0e3d6154df5ac5e89"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_3",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "azz_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e3a7612b7fa5b69",
            "route_table_id": "rtb-05e5427710c5c3112",
            "subnet_id": "subnet-06cbecdc8af9514f9"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_4",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e202e57f20306ce",
            "route_table_id": "rtb-0d1ae87f702744283",
            "subnet_id": "subnet-00a18c20dc7ed9bcd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3f6a7b16dbb64a3",
            "route_table_id": "rtb-0d1ae87f702744283",
            "subnet_id": "subnet-006dc6127c1106d7c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-0e4b8d0ad7e210db9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4b8d0ad7e210db9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-default-private-subnet-1",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-private-subnet-1",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-0b14f77d473a137d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b14f77d473a137d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-default-private-subnet-2",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-private-subnet-2",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-0e3d6154df5ac5e89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3d6154df5ac5e89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-default-private-subnet-3",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-private-subnet-3",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-06cbecdc8af9514f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cbecdc8af9514f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-default-private-subnet-4",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-private-subnet-4",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-00a18c20dc7ed9bcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a18c20dc7ed9bcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-default-public-subnet-1",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-public-subnet-1",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:subnet/subnet-006dc6127c1106d7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006dc6127c1106d7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450665609241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jupiter-static-default-public-subnet-2",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-public-subnet-2",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "vpc_id": "vpc-0ef85c8a03ffeab58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:450665609241:vpc/vpc-0ef85c8a03ffeab58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ab40aed4e805636",
            "default_route_table_id": "rtb-02931f8bbecb9aef7",
            "default_security_group_id": "sg-051af3de34292511a",
            "dhcp_options_id": "dopt-08b84390b377912a0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef85c8a03ffeab58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02931f8bbecb9aef7",
            "owner_id": "450665609241",
            "tags": {
              "Name": "jupiter-static-default-main-vpc",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            },
            "tags_all": {
              "Name": "jupiter-static-default-main-vpc",
              "application": "static",
              "contact": "devops@jjtechinc.com",
              "creationTime": "2024-05-24T17:14:38Z",
              "environment": "default",
              "project": "jupiter"
            }
          }
        }
      ]
    }
  ]
}